--- a/ui/public/index.html
+++ b/ui/public/index.html
@@ -16,4 +16,10 @@
     <!-- built files will be auto injected -->
 </body>
 
+<style>
+body{
+  background-color: #202222;
+  margin: 0px;
+}
+</style>
 </html>
